# local-mongoose-webserver-plugin

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/scripts/: Build-Windows.ps1  build-macos  package-macos
cmake/common/: buildnumber.cmake  buildspec_common.cmake
cmake/macos/: defaults.cmake  helpers.cmake  obs_initial_cache.cmake  subbuild_toolchain.cmake
installer/: lws-installer.nsi
local-mongoose-webserver.xcodeproj/: project.pbxproj
local-mongoose-webserver.xcodeproj/xcshareddata/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  install.xcscheme  local-mongoose-webserver.xcscheme  local-mongoose-webserver_autogen.xcscheme
src/: config.hpp  log.hpp  lws_dialog.cpp  lws_dialog.hpp  lws_obs_helpers.cpp  lws_obs_helpers.hpp  lws_paths.cpp  lws_paths.hpp  lws_server.cpp  lws_server.hpp  lws_settings.cpp  lws_settings.hpp  plugin.cpp
